Add links to sections

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           A professional translator and communicator working from English, French and Galician into Spanish. I grew up in Galicia, Spain, and my love for languages led me to study at University of Geneva, while living in France right across the border. With a background in communication, marketing and social media, and over eight years of experience in the non-profit sector, I’m passionate about using language to have a positive impact. You can make my heart sing with creative projects, which is why I enjoy transcreation and literary translation. On that same note, I am also a singer and musician, and I like to constantly learn new skills, so I keep up with a diverse list of hobbies, including reading, baking, knitting and gardening.
         </p>
         <div class="intro-links">
-          <a href="#contact-form-en" title="Scroll down to contact form">Contact</a>
+          <a href="#contact-form" title="Scroll down to contact form">Contact</a>
           <span>·</span>
           <a href="AngelaGV_Translator_EN_Resume.pdf" target="_blank">CV</a>
           <span>·</span>
@@ -36,7 +36,11 @@
     </section>
 
     <section class="services">
-      <h2>Here are the main <strong>services</strong> I provide <span class="emoji">🙇</span></h2>
+      <h2 id="services">
+        <a href="#services">
+          Here are the main <strong>services</strong> I provide <span class="emoji">🙇</span>
+        </a>
+      </h2>
       <div class="services-content">
         <ul class="services-titles">
           <li tabindex="0" aria-describedby="translation-desc-en">Translation</li>
@@ -54,7 +58,11 @@
     </section>
 
     <section class="tools">
-      <h2>These are some of the <strong>tools</strong> I’ve used <span class="emoji">🛠</span></h2>
+      <h2 id="tools">
+        <a href="#tools">
+          These are some of the <strong>tools</strong> I’ve used <span class="emoji">🛠</span>
+        </a>
+      </h2>
       <ul class="tools-list">
         <li>
           <a target="_blank" href="https://memoq.com">
@@ -146,7 +154,11 @@
     </section>
 
     <section class="education">
-      <h2>If you are wondering, I got my <strong>education</strong> from <span class="emoji">🎓</span></h2>
+      <h2 id="education">
+        <a href="#education">
+          If you are wondering, I got my <strong>education</strong> from <span class="emoji">🎓</span>
+        </a>
+      </h2>
       <ol class="education-list">
         <li class="left-to-right-connection">
           <div class="bullet">2020</div>
@@ -179,7 +191,11 @@
     </section>
 
     <section class="courses">
-      <h2>And I intend to keep learning, so I’ve also done these <strong>courses</strong> <span class="emoji">📚</span></h2>
+      <h2 id="courses">
+        <a href="#courses">
+          And I intend to keep learning, so I’ve also done these <strong>courses</strong> <span class="emoji">📚</span>
+        </a>
+      </h2>
       <ol class="courses-list education-list">
         <li>
           <div class="bullet">2020</div>
@@ -222,7 +238,11 @@
     </section>
 
     <section class="experience">
-      <h2>Here is my <strong>professional experience</strong> so far <span class="emoji">👵</span></h2>
+      <h2 id="experience">
+        <a href="#experience">
+          Here is my <strong>professional experience</strong> so far <span class="emoji">👵</span>
+        </a>
+      </h2>
       <ol class="experience-list education-list">
         <li>
           <div class="bullet">2016</div>
@@ -274,10 +294,14 @@
       <div class="outro-content centered">
         <div class="contact-area">
           <div class="contact-text">
-            <h2>Reach out! <span class="emoji">📝</span></h2>
+            <h2 id="contact-form">
+              <a href="#contact-form">
+                Reach out! <span class="emoji">📝</span>
+              </a>
+            </h2>
             <p>Got a project you might want me to collaborate on? Any questions about my services and what I’m able to do? This is your chance! Shoot me a message and let’s chat. And don’t worry if what you’re looking for isn’t mentioned or included in this page, because it never hurts to ask, and I’m always happy to learn and work on new stuff!</p>
           </div>
-          <div class="contact-form" id="contact-form-en">
+          <div class="contact-form">
             <iframe data-tally-src="https://tally.so/embed/5BKdrb?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Contact form"></iframe>
           </div>
           <div class="back-to-top-link">
@@ -305,7 +329,7 @@
           Trabajo como traductora profesional del inglés, francés y gallego al español. Me crié en Galicia, España, y mi amor por los idiomas hizo que acabase estudiando en la Facultad de Traducción e Interpretación de la Universidad de Ginebra, mientras vivía en Francia al otro lado de la frontera. Con mi trayectoria en comunicación, <i>marketing</i> y redes sociales, y más de ocho años de experiencia con organizaciones sin ánimo de lucro, creo fervientemente en el poder del lenguaje como motor del cambio. Los proyectos creativos son música para mis oídos, por eso me encantan la transcreación y la traducción literaria. También soy cantante y música, y me encanta aprender cosas nuevas de forma constante, así que tengo una lista de <i>hobbies</i> generosa, como la lectura, la repostería con masa madre, el punto o la jardinería.
         </p>
         <div class="intro-links">
-          <a href="#contact-form-es" title="Scroll down to contact form">Contacto</a>
+          <a href="#contact-form" title="Scroll down to contact form">Contacto</a>
           <span>·</span>
           <a href="Traductora_EN-ES_Angela_Grana_Varela.pdf" target="_blank">CV</a>
           <span>·</span>
@@ -319,7 +343,11 @@
     </section>
 
     <section class="services">
-      <h2>No soy <i>superwoman</i>, pero sí ofrezco varios <strong>servicios</strong> <span class="emoji">🙇</span></h2>
+      <h2 id="services">
+        <a href="#services">
+          No soy <i>superwoman</i>, pero sí ofrezco varios <strong>servicios</strong> <span class="emoji">🙇</span>
+        </a>
+      </h2>
       <div class="services-content">
         <ul class="services-titles">
           <li tabindex="0" aria-describedby="translation-desc-es">Traducción</li>
@@ -337,7 +365,11 @@
     </section>
 
     <section class="tools">
-      <h2>Estas son algunas de las <strong>herramientas</strong> que he usado para mi trabajo <span class="emoji">🛠</span></h2>
+      <h2 id="tools">
+        <a href="#tools">
+          Estas son algunas de las <strong>herramientas</strong> que he usado para mi trabajo <span class="emoji">🛠</span>
+        </a>
+      </h2>
       <ul class="tools-list">
         <li>
           <a target="_blank" href="https://memoq.com">
@@ -429,7 +461,11 @@
     </section>
 
     <section class="education">
-      <h2>Como seguro que te mueres por saberlo, este es mi <strong>historial educativo</strong> <span class="emoji">🎓</span></h2>
+      <h2 id="education">
+        <a href="#education">
+          Como seguro que te mueres por saberlo, este es mi <strong>historial educativo</strong> <span class="emoji">🎓</span>
+        </a>
+      </h2>
       <ol class="education-list">
         <li class="left-to-right-connection">
           <div class="bullet">2020</div>
@@ -462,7 +498,11 @@
     </section>
 
     <section class="courses">
-      <h2>No pienso dejar de aprender, así que he ido haciendo estos <strong>cursos</strong> <span class="emoji">📚</span></h2>
+      <h2 id="courses">
+        <a href="#courses">
+          No pienso dejar de aprender, así que he ido haciendo estos <strong>cursos</strong> <span class="emoji">📚</span>
+        </a>
+      </h2>
       <ol class="courses-list education-list">
         <li>
           <div class="bullet">2020</div>
@@ -505,7 +545,11 @@
     </section>
 
     <section class="experience">
-      <h2>Esto se ha estado cociendo en mi <strong>experiencia profesional</strong> estos años <span class="emoji">👵</span></h2>
+      <h2 id="experience">
+        <a href="#experience">
+          Esto se ha estado cociendo en mi <strong>experiencia profesional</strong> estos años <span class="emoji">👵</span>
+        </a>
+      </h2>
       <ol class="experience-list education-list">
         <li>
           <div class="bullet">2016</div>
@@ -557,10 +601,14 @@
       <div class="outro-content centered">
         <div class="contact-area">
           <div class="contact-text">
-            <h2>Contáctame <span class="emoji">📝</span></h2>
+            <h2 id="contact-form">
+              <a href="#contact-form">
+                Contáctame <span class="emoji">📝</span>
+              </a>
+            </h2>
             <p>¿Quieres colaborar en algún proyecto? ¿Tienes alguna pregunta sobre mis servicios que no ves respondida en mi página? ¡Adelante! No dudes en contactarme para lo que sea. Aunque sea algo no mencionado en esta página, seguro que podemos hablarlo.</p>
           </div>
-          <div class="contact-form" id="contact-form-es">
+          <div class="contact-form">
             <iframe data-tally-src="https://tally.so/embed/Gxvr7z?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="228" frameborder="0" marginheight="0" marginwidth="0" title="Spanish contact form"></iframe>
           </div>
           <div class="back-to-top-link">
@@ -629,6 +677,8 @@
         display: inline-block;
         font-weight: 400;
         position: relative;
+
+        a { color: inherit }
 
         .emoji {
           line-height: 0;
@@ -1023,6 +1073,7 @@
     for (const anchor of document.querySelectorAll(`a[href^='#']`)) {
       anchor.onclick = ev => {
         ev.preventDefault()
+        location.hash = ev.target.closest('a').getAttribute('href')
         document
           .querySelector('main:not([hidden]) ' + anchor.getAttribute('href'))
           .scrollIntoView({ behavior: 'smooth' })
