Simplify timeline logic

--- a/index.html
+++ b/index.html
@@ -136,14 +136,6 @@
             Photoshop
           </a>
         </li>
-        <!--
-        <li>
-          <a target="_blank" href="https://adobe.com/products/illustrator.html">
-            <img height="22" alt="Adobe Illustrator’s logo" src="illustrator-logo.svg">
-            Illustrator
-          </a>
-        </li>
-        -->
         <li>
           <a target="_blank" href="https://adobe.com/products/premiere.html">
             <img height="22" alt="Adobe Premiere Pro’s logo" src="adobe-premiere-pro-logo.svg">
@@ -159,22 +151,16 @@
           If you are wondering, I got my <strong>education</strong> from <span class="emoji">🎓</span>
         </a>
       </h2>
-      <ol class="education-list">
-        <li class="left-to-right-connection">
+      <ol class="timeline">
+        <li>
           <div class="bullet">2020</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px">
-            <path d="M 20 20 Q 20 50, 40 50 T 60 80" />
-          </svg>
           <div class="content">
             <h3>Bachelor of Arts in Multilingual Communication</h3>
             <h4>University of Geneva, Switzerland</h4>
           </div>
         </li>
-        <li class="right-to-left-connection">
+        <li>
           <div class="bullet">2018</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px">
-            <path d="M 60 20 Q 60 50, 40 50 T 20 80" />
-          </svg>
           <div class="content">
             <h3>Erasmus+ Exchange</h3>
             <h4>Heriot-Watt University, Scotland</h4>
@@ -196,12 +182,9 @@
           And I intend to keep learning, so I’ve also done these <strong>courses</strong> <span class="emoji">📚</span>
         </a>
       </h2>
-      <ol class="courses-list education-list">
+      <ol class="timeline">
         <li>
           <div class="bullet">2020</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="100px">
-            <path d="M 20 20 L 20 80" />
-          </svg>
           <div class="content">
             <h3>Romantic and erotic translation EN–ES</h3>
             <h4>AulaSIC</h4>
@@ -209,9 +192,6 @@
         </li>
         <li>
           <div class="bullet">2020</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="100px">
-            <path d="M 20 20 L 20 80" />
-          </svg>
           <div class="content">
             <h3>Punctuation and orthography</h3>
             <h4>Cursiva (RAE)</h4>
@@ -219,9 +199,6 @@
         </li>
         <li>
           <div class="bullet">2021</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="100px">
-            <path d="M 20 20 L 20 80" />
-          </svg>
           <div class="content">
             <h3>Subtitling and audiovisual translation</h3>
             <h4>AulaSIC</h4>
@@ -243,12 +220,9 @@
           Here is my <strong>professional experience</strong> so far <span class="emoji">👵</span>
         </a>
       </h2>
-      <ol class="experience-list education-list">
+      <ol class="timeline">
         <li>
           <div class="bullet">2016</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px">
-            <path d="M 20 20 L 20 80" />
-          </svg>
           <div class="content">
             <h3>Volunteer Translator at <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
             <p>As a teenager, I learned that the Internet was a much bigger world if you spoke English. It was around that time that I discovered NutritionFacts and fell in love with their mission. As a non-profit organization, a lot of their translation work is done through volunteers, and I jumped on that bandwagon as soon as the opportunity presented itself.</p>
@@ -466,22 +440,16 @@
           Como seguro que te mueres por saberlo, este es mi <strong>historial educativo</strong> <span class="emoji">🎓</span>
         </a>
       </h2>
-      <ol class="education-list">
-        <li class="left-to-right-connection">
+      <ol class="timeline">
+        <li>
           <div class="bullet">2020</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px">
-            <path d="M 20 20 Q 20 50, 40 50 T 60 80" />
-          </svg>
           <div class="content">
             <h3>Grado en Comunicación Multilingüe</h3>
             <h4>Universidad de Ginebra, Suiza</h4>
           </div>
         </li>
-        <li class="right-to-left-connection">
+        <li>
           <div class="bullet">2018</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="80px" height="100px">
-            <path d="M 60 20 Q 60 50, 40 50 T 20 80" />
-          </svg>
           <div class="content">
             <h3>Intercambio Erasmus+</h3>
             <h4>Heriot-Watt University, Escocia</h4>
@@ -503,12 +471,9 @@
           No pienso dejar de aprender, así que he ido haciendo estos <strong>cursos</strong> <span class="emoji">📚</span>
         </a>
       </h2>
-      <ol class="courses-list education-list">
+      <ol class="timeline">
         <li>
           <div class="bullet">2020</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="100px">
-            <path d="M 20 20 L 20 80" />
-          </svg>
           <div class="content">
             <h3>Traducción romántica y erótica EN–ES</h3>
             <h4>AulaSIC</h4>
@@ -516,9 +481,6 @@
         </li>
         <li>
           <div class="bullet">2020</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="100px">
-            <path d="M 20 20 L 20 80" />
-          </svg>
           <div class="content">
             <h3>Corrección ortográfica: la puntuación</h3>
             <h4>Cursiva (RAE)</h4>
@@ -526,9 +488,6 @@
         </li>
         <li>
           <div class="bullet">2021</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="100px">
-            <path d="M 20 20 L 20 80" />
-          </svg>
           <div class="content">
             <h3>Traducción audiovisual: subtitulado</h3>
             <h4>AulaSIC</h4>
@@ -550,12 +509,9 @@
           Esto se ha estado cociendo en mi <strong>experiencia profesional</strong> estos años <span class="emoji">👵</span>
         </a>
       </h2>
-      <ol class="experience-list education-list">
+      <ol class="timeline">
         <li>
           <div class="bullet">2016</div>
-          <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px">
-            <path d="M 20 20 L 20 80" />
-          </svg>
           <div class="content">
             <h3>Traductora voluntaria para <a href="https://nutritionfacts.org" target="_blank">NutritionFacts.org</a></h3>
             <p>En mi adolescencia, descubrí que Internet es un universo enorme cuando sabes inglés. Por aquel entonces, encontré a NutritionFacts y me enamoré de su misión. Como organización sin ánimo de lucro, muchas de sus traducciones están hechas por voluntarios, y me uní a la causa tan pronto como tuve oportunidad.</p>
@@ -721,7 +677,6 @@
     }
 
     .intro {
-      /* height: 100vh; */
       min-height: 700px;
       background-image: linear-gradient(#412565, #ab6bb0);
       position: relative;
@@ -867,7 +822,7 @@
 
     .rounded-logo { border-radius: 5px }
 
-    .education-list {
+    .timeline {
       > li {
         display: flex;
         flex-direction: row;
@@ -892,10 +847,6 @@
         color: rgb(255 255 255 / 85%);
         background-image: linear-gradient(#ab6bb0, #895599);
       }
-
-      .right-to-left-connection { margin-left: 40px }
-
-      .right-to-left-connection .bullet-connection { left: -40px }
 
       > li .content { margin-left: 14px }
 
@@ -947,7 +898,7 @@
       fill: transparent;
     }
 
-    .experience-list > li h3 { margin-top: 9px }
+    .experience .timeline > li h3 { margin-top: 9px }
 
     .outro {
       height: 95vh;
@@ -1021,21 +972,6 @@
       position: absolute;
       bottom: 32px;
       opacity: 0.65;
-    }
-
-    @media (max-width: 820px) {
-      .outro .contact-area {
-        width: 65vw;
-        min-width: 300px;
-        margin-top: -15px;
-        flex-direction: column;
-
-        > .contact-text { margin: 0 16px 16px 16px }
-      }
-    }
-
-    @media (max-height: 700px) {
-      .outro .contact-form textarea { max-height: 150px }
     }
   </style>
 
@@ -1134,7 +1070,7 @@
       bodyShift = 0
       body.style.left = '' + bodyShift
       showBelowFoldSections()
-      connectAllTimelineBullets(englishPage)
+      connectTimelineBullets(englishPage)
       forceEnglishPageReflow()
     }
 
@@ -1144,7 +1080,7 @@
       bodyShift = 100
       body.style.left = `-${bodyShift}vw`
       showBelowFoldSections()
-      connectAllTimelineBullets(spanishPage)
+      connectTimelineBullets(spanishPage)
     }
 
     // Force a reflow so that Safari takes into account the scrollbar
@@ -1186,59 +1122,20 @@
       )
     }
 
-    function connectAllTimelineBullets(context) {
-      connectLeftToRightTimelineBullets(context)
-      connectRightToLeftTimelineBullets(context)
-      connectStraightTimelineBullets(context.querySelector('.courses-list'))
-      connectStraightTimelineBullets(context.querySelector('.experience-list'))
-    }
+    function connectTimelineBullets(context) {
+      for (const timeline of context.querySelectorAll('.timeline')) {
+        const hasBulletConnections = timeline.querySelector('.bullet-connection') != null
+        if (hasBulletConnections) return
 
-    function connectStraightTimelineBullets(context) {
-      const bullets = Array.from(context.querySelectorAll('.bullet'))
-      const bulletConnectionSvgs = Array.from(context.querySelectorAll('.bullet-connection'))
-      const bulletConnectionPaths = Array.from(context.querySelectorAll('.bullet-connection path'))
-
-      for (let i = 0; i < bullets.length - 1; ++i) {
-        const diff = bullets[i + 1].getBoundingClientRect().top - bullets[i].getBoundingClientRect().top
-        bulletConnectionSvgs[i].setAttribute('height', `${diff + 40}px`)
-        bulletConnectionPaths[i].setAttribute('d', `M 20 20 L 20 ${diff + 20}`)
-      }
-    }
-
-    function connectLeftToRightTimelineBullets(context) {
-      const connections = context.querySelectorAll('.left-to-right-connection')
-
-      for (const connection of connections) {
-        const bullet = connection.querySelector('.bullet')
-        const bulletConnectionSvg = connection.querySelector('.bullet-connection')
-        const bulletConnectionPath = connection.querySelector('.bullet-connection path')
-
-        const nextConnection = connection.nextElementSibling
-        const nextBullet = nextConnection.querySelector('.bullet')
-
-        const diff = nextBullet.getBoundingClientRect().top - bullet.getBoundingClientRect().top
-        const svgHeight = diff + 40
-        bulletConnectionSvg.setAttribute('height', `${svgHeight}px`)
-        bulletConnectionPath.setAttribute('d', `M 20 20 Q 20 ${svgHeight / 2}, 40 ${svgHeight / 2} T 60 ${svgHeight - 20}`)
-      }
-    }
-
-    function connectRightToLeftTimelineBullets(context) {
-      const connections = context.querySelectorAll('.right-to-left-connection')
-
-      for (const connection of connections) {
-        const bullet = connection.querySelector('.bullet')
-        const bulletConnectionSvg = connection.querySelector('.bullet-connection')
-        const bulletConnectionPath = connection.querySelector('.bullet-connection path')
-
-        const nextConnection = connection.nextElementSibling
-        const nextBullet = nextConnection.querySelector('.bullet')
-
-        const diff = nextBullet.getBoundingClientRect().top - bullet.getBoundingClientRect().top
-        const svgHeight = diff + 40
-        bulletConnectionSvg.setAttribute('height', `${svgHeight}px`)
-        bulletConnectionPath.setAttribute('d', `M 20 20 Q 20 ${svgHeight / 2}, 40 ${svgHeight / 2} T 60 ${svgHeight - 20}`)
-        bulletConnectionPath.setAttribute('d', `M 60 20 Q 60 ${svgHeight / 2}, 40 ${svgHeight / 2} T 20 ${svgHeight - 20}`)
+        const bullets = Array.from(timeline.querySelectorAll('.bullet'))
+        for (let i = 0; i < bullets.length - 1; ++i) {
+          const diff = bullets[i + 1].getBoundingClientRect().top - bullets[i].getBoundingClientRect().top
+          bullets[i].parentElement.innerHTML += `
+            <svg class="bullet-connection" xmlns="http://www.w3.org/2000/svg" width="40px" height="${diff + 40}px">
+              <path d="M 20 20 L 20 ${diff + 20}" />
+            </svg>
+          `
+        }
       }
     }
   </script>
