--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ángela G. V.</title>
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👩🏻‍💻</text></svg>">
+  <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">👩🏻‍💻</text></svg>'>
 <body>
   <main lang="en" hidden>
     <section id="intro">
@@ -501,6 +501,8 @@
 
     i { font-style: normal }
 
+    small { font-size: 0.85rem }
+
     ul, ol {
       list-style: none;
       margin: 0;
@@ -509,11 +511,11 @@
 
     .rounded { border-radius: 6px }
 
-    .secondary-text { color: #808080 }
+    .secondary-text { color: #808080 !important }
 
     ::selection { background-color: #ab6bb044 }
 
-    html { font-size: 17px }
+    html { font-size: 18px }
 
     body {
       margin: 0;
@@ -534,6 +536,7 @@
 
       > h2 > a,
       > article > h2 > a {
+        font-size: 1.4rem;
         font-weight: 400;
         position: relative;
         color: inherit;
@@ -595,7 +598,7 @@
       gap: 2px;
       align-items: center;
       padding: 20px;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       font-weight: 500;
       opacity: 0.5;
       color: #eee;
@@ -613,7 +616,7 @@
       }
 
       > h1 {
-        font-size: 2.25rem;
+        font-size: 2rem;
         font-weight: 500;
         margin: 0 0 15px 0;
 
@@ -624,7 +627,7 @@
       }
 
       > p {
-        font-size: 1.1rem;
+        font-size: 1.05rem;
         line-height: 150%;
         margin: 0 0 25px 0;
       }
@@ -666,7 +669,6 @@
       }
 
       > p {
-        font-size: 1.025rem;
         line-height: 150%;
         margin: 0 0 25px 0;
       }
@@ -684,14 +686,14 @@
     #outro > a.back-to-top {
       display: block;
       text-align: center;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       color: #eee;
       opacity: 0.5;
 
       &:hover { opacity: 1 }
     }
 
-    #outro > small { opacity: 0.65 }
+    #outro > small { opacity: 0.75 }
 
     #services > article {
       display: flex;
@@ -702,9 +704,9 @@
 
         > li {
           cursor: pointer;
-          padding: 8px 12px 8px 16px;
+          padding: 7.5px 7.5px 7.5px 15px;
           text-align: right;
-          font-size: 1.1rem;
+          font-size: 1.05rem;
           font-weight: 500;
           border-radius: 50px 0 0 50px;
           color: #777;
@@ -719,12 +721,9 @@
       }
 
       > ul:last-child {
-        padding: 4px 0;
+        padding: 0.5ch 0;
 
-        li {
-          line-height: 150%;
-          font-size: 17px;
-        }
+        li { line-height: 150% }
 
         li:not(.selected) { display: none }
       }
@@ -733,21 +732,21 @@
     #tools > ul {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 12px;
+      gap: 10px;
 
       > li > a {
         display: inline-block;
         width: 100%;
-        padding: 12px 0;
+        padding: 12.5px 0;
+        font-size: 0.95rem;
         text-align: center;
-        color: #444;
-        background-color: #eaeaea;
         border-radius: 6px;
+        color: inherit;
+        background-color: #eaeaea;
         filter: grayscale(100%);
 
         &:hover {
           filter: none;
-          color: #111;
           background-color: #ab6bb022;
         }
 
@@ -775,7 +774,7 @@
         height: 10px;
         border-radius: 50%;
         position: absolute;
-        top: 5px;
+        top: 7px;
         left: -20px;
         background-color: #895599;
       }
@@ -792,33 +791,32 @@
       }
 
       > li > time {
-        padding: 3px 5px;
+        padding: 2px 6px 3px 6px;
         border-radius: 6px;
-        font-size: 12px;
+        font-size: 0.7rem;
         font-weight: 600;
         background-color: #d3d3d3;
       }
 
       > li > h3 {
-        margin: 8px 0 0 0;
-        font-size: 18px;
+        font-size: 1.125rem;
+        margin: 10px 0 0 0;
         font-weight: 400;
       }
 
       > li > h4 {
-        margin: 4px 0 0 0;
-        font-size: 15px;
+        margin: 5px 0 0 0;
+        font-size: 0.95rem;
         font-weight: 400;
-        color: #444;
+        color: #333;
       }
 
-      > li p {
+      > li > p {
         line-height: 150%;
-        font-size: 15px;
-        color: #444;
-      }
+        color: #333;
 
-      > li p:last-child { margin-bottom: 0 }
+        &:last-child { margin-bottom: 0 }
+      }
 
       > li ul {
         list-style: initial;
@@ -827,13 +825,11 @@
         gap: 5px;
         padding-left: 15px;
         line-height: 150%;
-        font-size: 15px;
-        color: #444;
+        color: #333;
       }
 
       > li a {
         color: #895599;
-        padding-bottom: 1px;
 
         &:hover { color: #65157d }
       }
